# Data-Validation

./: README.md  main.py  pyproject.toml
src/: data_validation.ipynb
