[project]
name = "venv-data-validation"
version = "0.1.0"
description = "Proyecto Data Validation con Python 3.12.9"
authors = [
    {name = "Jorge Andrés Robledo Ariza"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
